# code-graph-mcp

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SETUP.md  config.yaml  docker-compose.yml  mise.toml  pyproject.toml
.claude/skills/mrcis-add-extractor/: SKILL.md
.claude/skills/mrcis-add-storage-backend/: SKILL.md
.claude/skills/mrcis-architecture-guide/: SKILL.md
.github/: commitlint.config.js  commitlint.config.mjs
.github/workflows/: README.md  ci.yml  release.yml
mrcis/: .pre-commit-config.yaml  CONTRIBUTING.md  config.yaml  pyproject.toml
mrcis/src/mrcis/: __init__.py  errors.py  server.py
mrcis/src/mrcis/config/: loader.py  models.py
mrcis/src/mrcis/extractors/: __init__.py  adapter.py  base.py  context.py  go.py  html_extractor.py  javascript.py  json_extractor.py  markdown.py  python.py  registry.py  ruby.py  rust.py  typescript.py  yaml_extractor.py
mrcis/src/mrcis/models/: __init__.py
mrcis/src/mrcis/ports/: embedder.py
mrcis/src/mrcis/prompts/: __init__.py  change_plan.py  explore.py  impact.py  safe_change.py
mrcis/src/mrcis/services/: instance_lock.py  pathing.py  resolver.py  watcher.py
mrcis/src/mrcis/storage/: __init__.py  factory.py  relation_graph.py  state_db.py
mrcis/src/mrcis/tools/: __init__.py  references.py  status.py
mrcis/src/mrcis/utils/: __init__.py  logging.py  paths.py  retry.py
mrcis/tests/: test_init.py
mrcis/tests/integration/: conftest.py
mrcis/tests/unit/: test_cli.py
mrcis/tests/unit/config/: test_neo4j_config.py
mrcis/tests/unit/ports/: test_db_session_port.py
mrcis/tests/unit/services/: test_pathing.py
mrcis/tests/unit/storage/: test_factory.py  test_neo4j_graph.py  test_neo4j_vectors.py  test_state_db_encapsulation.py
mrcis/tests/unit/test_config/: test_embedding_config.py  test_loader.py  test_other_configs.py  test_server_config.py
src/mrcis/: __main__.py  server_runtime.py
src/mrcis/config/: __init__.py  models.py  reconciler.py
src/mrcis/extractors/: base.py  defaults.py  dockerfile.py  java.py  kotlin.py  toml_extractor.py  typescript.py
src/mrcis/models/: entities.py  extraction.py  relations.py  responses.py  state.py
src/mrcis/ports/: __init__.py  db_session.py  extractors.py  relation_graph.py  state.py  vector_store.py
src/mrcis/services/: __init__.py  embedder.py  file_event_router.py  file_filter.py  indexer.py
src/mrcis/storage/: neo4j_graph.py  neo4j_vectors.py  relation_graph.py  state_db.py  vector_store.py
src/mrcis/tools/: search.py  status.py
src/mrcis/utils/: hashing.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_full_pipeline.py  test_neo4j_backend.py
tests/unit/: test_errors.py  test_server.py  test_server_runtime.py
tests/unit/ports/: test_ports_protocols.py
tests/unit/services/: test_file_event_router.py  test_file_filter.py  test_instance_lock.py
tests/unit/test_config/: test_embedding_config.py  test_files_config.py  test_repository_config.py  test_root_config.py  test_storage_config.py
tests/unit/test_extractors/: test_adapter.py  test_context.py  test_defaults.py  test_dockerfile.py  test_html.py  test_java.py  test_java_calls.py  test_javascript_calls.py  test_json.py  test_kotlin_calls.py  test_python_classes.py  test_python_functions.py  test_ruby_calls.py  test_ruby_rails.py  test_ruby_rake.py  test_typescript.py  test_typescript_calls.py
tests/unit/test_models/: test_class_entity.py  test_enums.py  test_function_entity.py  test_other_entities.py  test_relations.py  test_state.py
tests/unit/test_prompts/: test_change_plan.py  test_explore.py
tests/unit/test_services/: test_embedder.py  test_indexer.py  test_resolver.py
tests/unit/test_storage/: __init__.py  test_crash_recovery.py  test_file_crud.py  test_vector_store.py
tests/unit/test_tools/: test_status.py
tests/unit/test_utils/: test_hashing.py  test_retry.py
(+50 files in other folders)
