[project]
name = "mrcis"
version = "1.0.1"
description = "Multi-Repository Code Intelligence System"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "JonnyDB" }
]
keywords = ["code-intelligence", "mcp", "semantic-search", "ast"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # MCP Server
    "mcp>=1.0.0",

    # Configuration
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",

    # Tree-sitter parsing
    "tree-sitter>=0.24",
    "tree-sitter-language-pack>=0.2",

    # Storage
    "lancedb>=0.4",
    "aiosqlite>=0.19",

    # Embedding (OpenAI-compatible client)
    "openai>=1.0",

    # File watching
    "watchdog>=3.0",

    # Utilities
    "loguru>=0.7",
    "pathspec>=0.11",
    "backoff>=2.2",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "mypy>=1.5",
    "ruff>=0.1",
    "types-PyYAML>=6.0",
    "neo4j>=5.0",
    "pre-commit>=3.0",
]
neo4j = [
    "neo4j>=5.0",
]

[project.scripts]
mrcis = "mrcis.__main__:main"

[project.urls]
Homepage = "https://github.com/JonnyDB/code-graph-mcp"
Repository = "https://github.com/JonnyDB/code-graph-mcp"
Issues = "https://github.com/JonnyDB/code-graph-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mrcis"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
]

[tool.ruff.lint.per-file-ignores]
# Lazy imports are intentional in CLI commands (startup perf) and server tool registrations
"src/mrcis/__main__.py" = ["PLC0415"]
"src/mrcis/server.py" = ["PLC0415"]
# Lazy imports in storage factory for optional backends (e.g. Neo4j)
"src/mrcis/storage/factory.py" = ["PLC0415"]
# Integration tests use lazy imports for optional dependencies
"tests/integration/*" = ["PLC0415"]

[tool.ruff.lint.isort]
known-first-party = ["mrcis"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "lancedb.*",
    "neo4j.*",
    "tree_sitter.*",
    "tree_sitter_language_pack.*",
    "watchdog.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/mrcis"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "mypy>=1.5",
    "ruff>=0.1",
    "types-PyYAML>=6.0",
    "neo4j>=5.0",
    "pre-commit>=3.0",
]
